--- a/app.css
+++ b/app.css
@@ -1,26 +1,70 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     background-color: #f5d9d5;
     font-family: "Nunito", sans-serif;
 }
-#mainNavbar .navbar-brand{
-    color: #EA1C2C;
+.edit h2{
+    color: #EA1C2C; 
+    text-shadow: 2px 2px 4px #e77a7a;
+    font-weight: 100;
+    font-size: 2.5rem;
+   
 }
-#mainNavbar .nav-link{
+.edit p{
+    color:#f498b8;
+    font-weight: 100;
+    font-size: 1.125rem;
+    line-height: 2;
+}
+.content{
+    margin-top: 100px;
+}
+
+#mainNavbar {
+    font-size: 1.5rem;
+    font-weight: 100;    
+}
+
+#mainNavbar .nav-link {
     color: white;
 }
-#mainNavbar .nav-link:hover{
+
+#mainNavbar .nav-link:hover {
     color: #EA1C2C;
 }
-#mainNavbar{
-    size: 1.5rem;
-    font-weight: 200;
+
+#mainNavbar .navbar-brand {
+    color: #EA1C2C;
+    text-shadow: 2px 2px 4px #e77a7a;
+    font-size: 1.5rem;
 }
-#headingGroup span{
+
+#headingGroup span {
     color: #EA1C2C;
 }
-#headingGroup h1{
+
+#headingGroup h1 {
     font-weight: 100;
-    size: 4rem;
+    font-size: 4rem;
+}
+.navbar.scrolled{
+    background-color: rgb(222, 192, 222);
+    transition: background 600ms;
+}
+footer div{
+    background-color: rgb(222, 192, 222);
+    color: #EA1C2C;
+    size: 1rem;
+}
+footer a{
+    color: #EA1C2C;
+}
+footer a:hover{
+    color: #EA1C2C; 
+    text-shadow: 2px 2px 4px #e77a7a;
+    text-decoration: none;
 }
 @media (max-width:1200px){
     #headingGroup h1{
